--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://priyaku07.github.io/space-tourism-website-main",
+  "homepage": "https://spacetourismpk.netlify.app/",
   "name": "space-tourism",
   "version": "0.1.0",
   "private": true,
